@@ -1,2 +1,2 @@
-#define VERSION "4.07.02"
+#define VERSION "4.08.00"
 #define YEARS   "2005-2014"
