@@ -2,17 +2,17 @@
 
 void Generator::polymorphicImpl(ostream &out) const
 {
-    if (not d_options.polymorphic())
-        return;
-
-    key(out);
-
-    out <<
-    "namespace Meta__\n"
-    "{\n"
-    "   Base::~Base()\n"
-    "   {}\n"
-    "}\n"
-    "\n";
+//    if (not d_options.polymorphic())
+//        return;
+//
+//    key(out);
+//
+//    out <<
+//    "namespace Meta__\n"
+//    "{\n"
+//    "   Base::~Base()\n"
+//    "   {}\n"
+//    "}\n"
+//    "\n";
 }
 
