@@ -1,4 +1,4 @@
-// Generated by Bisonc++ V4.07.02 on Mon, 17 Feb 2014 13:53:46 +0100
+// Generated by Bisonc++ V4.07.02 on Mon, 17 Feb 2014 18:32:28 +0100
 
 // $insert class.ih
 #include "parser.ih"
@@ -2544,13 +2544,6 @@ catch (Return__ retValue)
     if (d_debug__)
         s_out__ <<  "parse(): returns " << retValue << "\n" << dflush__;
     return retValue;
-}
-
-// $insert polymorphicImpl
-namespace Meta__
-{
-   Base::~Base()
-   {}
 }
 
 
