@@ -1,4 +1,4 @@
-// Generated by Bisonc++ V4.07.02 on Mon, 17 Feb 2014 13:53:46 +0100
+// Generated by Bisonc++ V4.07.02 on Mon, 17 Feb 2014 18:32:28 +0100
 
 #ifndef ParserBase_h_included
 #define ParserBase_h_included
@@ -166,7 +166,6 @@ namespace Meta__
 
         public:
             Base(Base const &other) = delete;
-            virtual ~Base();
 
             Tag__ tag() const;
     
@@ -440,13 +439,13 @@ inline Semantic<tg_>::operator typename Semantic<tg_>::DataType &()
 template <Tag__ tg_>
 inline typename TypeOf<tg_>::ReturnType Base::get() const
 {
-    return dynamic_cast<Semantic<tg_> const &>(*this);
+    return static_cast<Semantic<tg_> const &>(*this);
 }
 
 template <Tag__ tg_>
 inline typename TypeOf<tg_>::DataType &Base::get()
 {
-    return dynamic_cast<Semantic<tg_> &>(*this);
+    return static_cast<Semantic<tg_> &>(*this);
 }
 
 inline Tag__ SType::tag() const
