@@ -1,3 +1,11 @@
+bisonc++ (4.08.00) 
+
+  * std::shared_ptr doesn't slice: virtual ~Base() and dynamic_casts removed
+    from the generated parserbase.h files
+
+
+
+
 bisonc++ (4.07.02) 
 
   * Changed 'class SType into struct SType in skeletons/polymorphic, since all
